added draw and clear logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type = "text/css" href="./styles/style.css" media="screen">
 </head>
 <body>
-    <div id="etch-table"></div>
+    <button id="new-table-btn">New table</button>
+    <main id="etch-table"></main>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
