--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <link rel="stylesheet" type = "text/css" href="./styles/style.css" media="screen">
 </head>
 <body>
-    <button id="new-table-btn">New table</button>
-    <main id="etch-table"></main>
+    <h1>Naive D. Jack's Etch-A-Sketch</h1>
+    <div id="container">
+        <main id="etch-table"></main>
+        <div id="eraser-panel">
+            <input id="eraser" title ="Eraser function coming soon!" 
+                type="range" min="1" max="100" value="16" class="slider">            
+        </div>
+    </div>
+    <div id="preferences">
+        <label for="size-picker">Table size (0-100)</label>
+        <input id="size-picker" type="number" min="1" max="100" value="16">
+        <button id="new-table-btn">New table</button>
+    </div>
+    
     <script src="./scripts/script.js"></script>
 </body>
 </html>
